// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transform record for initial CR 1`] = `
{
  "caseNotes": {
    "Recent employment (last 6 months)": [
      {
        "eventDate": 2022-10-23T00:00:00.000Z,
        "noteBody": "Got a new job",
        "noteTitle": "Employed at Big Bob's Burger Joint",
      },
    ],
    "Recommended supervision level": [
      {
        "eventDate": null,
        "noteBody": "MEDIUM",
        "noteTitle": null,
      },
    ],
  },
  "eligibleCriteria": {
    "usMiClassificationReviewPastDueDate": {
      "eligibleDate": 2022-12-12T00:00:00.000Z,
    },
    "usMiNotAlreadyOnLowestEligibleSupervisionLevel": {
      "requiresSoRegistration": null,
      "supervisionLevel": "MAXIMUM",
    },
  },
  "externalId": "cr-eligible-1",
  "metadata": {
    "recommendedSupervisionLevel": "MEDIUM",
  },
  "stateCode": "US_MI",
}
`;

exports[`transform record for missing usMiNotAlreadyOnLowestEligibleSupervisionLevel 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "usMiClassificationReviewPastDueDate": {
      "eligibleDate": 2023-03-14T00:00:00.000Z,
    },
    "usMiNotAlreadyOnLowestEligibleSupervisionLevel": null,
  },
  "externalId": "cr-eligible-3",
  "metadata": {},
  "stateCode": "US_MI",
}
`;

exports[`transform record for six-month CR 1`] = `
{
  "caseNotes": {
    "Recommended supervision level": [
      {
        "eventDate": null,
        "noteBody": "MEDIUM",
        "noteTitle": null,
      },
    ],
  },
  "eligibleCriteria": {
    "usMiClassificationReviewPastDueDate": {
      "eligibleDate": 2019-01-12T00:00:00.000Z,
    },
    "usMiNotAlreadyOnLowestEligibleSupervisionLevel": {
      "requiresSoRegistration": null,
      "supervisionLevel": "MAXIMUM",
    },
  },
  "externalId": "cr-eligible-2",
  "metadata": {
    "recommendedSupervisionLevel": "MEDIUM",
  },
  "stateCode": "US_MI",
}
`;
